WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168299
[SOUP] Ensure a response MIME type when Content-Type is missing and sniffing not allowed
https://bugs.webkit.org/show_bug.cgi?id=168299
Summary
[SOUP] Ensure a response MIME type when Content-Type is missing and sniffing ...
Carlos Garcia Campos
Reported
2017-02-14 02:52:31 PST
Sniffing is not allowed but we can try to guess the MIME using the response path, or at least fallback to default MIME type instead of leaving an empty string. This will fix a couple of tests that expect application/octet-stream in this particular case.
Attachments
Patch
(3.26 KB, patch)
2017-02-14 03:06 PST
,
Carlos Garcia Campos
svillar
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2017-02-14 03:06:16 PST
Created
attachment 301481
[details]
Patch
Sergio Villar Senin
Comment 2
2017-02-14 03:35:03 PST
Comment on
attachment 301481
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=301481&action=review
> Source/WebKit2/NetworkProcess/soup/NetworkDataTaskSoup.cpp:334 > + }
What about just adding if (m_response.mimeType().isEmpty() && m_soupMessage->status_code != SOUP_STATUS_NOT_MODIFIED) m_response.setMimeType(MIMETypeRegistry::getMIMETypeForPath(m_response.url().path())); to the previous code? I prefer that option because it clearly shows that the call to updateFromSoupMessage is unconditional.
Carlos Garcia Campos
Comment 3
2017-02-14 03:47:09 PST
Comment on
attachment 301481
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=301481&action=review
>> Source/WebKit2/NetworkProcess/soup/NetworkDataTaskSoup.cpp:334 >> + } > > What about just adding > > if (m_response.mimeType().isEmpty() && m_soupMessage->status_code != SOUP_STATUS_NOT_MODIFIED) > m_response.setMimeType(MIMETypeRegistry::getMIMETypeForPath(m_response.url().path())); > > to the previous code? I prefer that option because it clearly shows that the call to updateFromSoupMessage is unconditional.
Yes, I thought about that, and I didn't do it to avoid checking 304 twice, but it's not a big deal anyway. I'll update it before landing, thanks for the review.
Carlos Garcia Campos
Comment 4
2017-02-14 03:56:47 PST
Committed
r212286
: <
http://trac.webkit.org/changeset/212286
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug