[SOUP] Ensure a response MIME type when Content-Type is missing and sniffing not allowed https://bugs.webkit.org/show_bug.cgi?id=168299

Reviewed by Sergio Villar Senin.

Sniffing is not allowed but we can try to guess the MIME using the response path, or at least fallback to
default MIME type instead of leaving an empty string. This matches what mac port does.

Fixes: http/tests/inspector/network/fetch-response-body.html
       http/tests/inspector/network/xhr-response-body.html

* NetworkProcess/soup/NetworkDataTaskSoup.cpp:
(WebKit::NetworkDataTaskSoup::didSendRequest):

Canonical link: https://commits.webkit.org/185321@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212286 268f45cc-cd09-0410-ab3c-d52691b4dbfc